feat: add @Like, @In and @Or annotations to BaseFilter
@Like matches String fields with LIKE, escaping wildcards unless
match = RAW, optionally ignoring case. @In matches Collection fields
with IN; an empty collection is skipped unless whenEmpty = MATCH_NONE.
@Or places a field's predicate in the filter's single disjunction.

Associations are left-joined where an inner join would drop rows the
query must return: IS_NULL predicates, @Or fields and sort orders. A
join is reused whatever its type, so each association is joined once.
AttributePathResolver becomes package-private.

customizeCriteria may no longer replace the query selection or group
the count query, and a distinct count query now counts distinct roots.

getFilterFieldValue is removed: hooks read filter values through the
filter's accessors, which filters must provide for the fields hooks
consume. This also fixes annotated fields shadowed by a subclass field,
which were never made accessible.

Fix the hook tests, which failed to resolve the entity type of
anonymous DAO subclasses and leaked an EntityManager per query, and add
end-to-end coverage of the annotation pipeline. Update the spec.